static: fixes margin on mobile

--- a/apps/about/stylesheets/about.styl
+++ b/apps/about/stylesheets/about.styl
@@ -224,7 +224,7 @@ body
     font-size 13px
 
   .static__mark
-    margin 43px 0 0 4px
+    margin 40px 0 4px 0
 
   .static__left-column
     clear both
@@ -236,6 +236,7 @@ body
     padding-top 40px
     width 100%
     max-width 500px
+    margin-left 0
 
   .static__tools__frame
     margin 0 0 80px 0
